# CRM-FBA

./: .gitignore  README.md  pyproject.toml
crm_dfba/: __init__.py  demo.py
crm_dfba/crms/: adaptive.py  base.py  macarthur.py  mcrm.py  monod.py  registry.py
crm_dfba/experiments/: test_suite.py
crm_dfba/models/: __init__.py
crm_dfba/processes/: crm.py  crm_dfba.py  fba.py
doc/: index.html
docs/: index.html
ecoli/: CRM_dfba_generalised.py  Hybrid_CRM_dfba.py  dFBA_Constrained_by_CRM.py  neural_ode.py  prediction_guided_benchmark_dfba.py  predictions.csv  predictions_into_CRM.py
tests/: test_composite_equivalence.py
yeast/: CRM_dfba.py  Explore_adaptive_model.ipynb  Get_CRM_predictions.py  predictions.csv
