[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-dfba"
version = "0.1.0"
description = "Consumer Resource Model-constrained dynamic FBA as a process-bigraph process"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "cobra",
    "process-bigraph",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib", "pandas"]

[tool.setuptools.packages.find]
include = ["crm_dfba*"]
